--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="http://www.barfieldheatingandair.com/webpics/headerbarfhvac2.jpg" alt="Barfield Logo" /></span>
+					<span class="image avatar"><img src="https://scontent-atl3-1.xx.fbcdn.net/v/t39.30808-1/302026534_563195202274665_5448558019126289487_n.jpg?stp=dst-jpg_p200x200&_nc_cat=106&ccb=1-7&_nc_sid=596444&_nc_ohc=vnmcuSsGN3QAX8kl414&_nc_ht=scontent-atl3-1.xx&oh=00_AfAoKz3Vcd-x0CGNADQ2Ls1_YGn_NJnXDUOIBF0Ntq2w9Q&oe=65C727C8" alt="Barfield Logo" /></span>
 					<h1 id="logo"><a href="#">Barfield Heating & Air</a></h1>
 					<p>Experience the Difference</p>
 				</header>
